--- a/NLP Disaster Tweets.ipynb
+++ b/NLP Disaster Tweets.ipynb
@@ -430,7 +430,7 @@
     "\n",
     "### Model Architecture\n",
     "\n",
-    "We’ll build a simple neural network for binary text classification. The model starts with an Embedding layer to learn word representations, followed by a Bidirectional LSTM to capture context in both directions. Finally, it ends with dense layers for prediction. To mitigate overfitting, multiple dropout layers has been mixed in.\n"
+    "I'll build a simple neural network for binary text classification. The model starts with an Embedding layer to learn word representations, followed by a Bidirectional LSTM to capture context in both directions. Finally, it ends with dense layers for prediction. To mitigate overfitting, multiple dropout layers has been mixed in.\n"
    ]
   },
   {
@@ -607,7 +607,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 4: Results and Analysis\n",
+    "## Results and Analysis\n",
     "\n",
     "Let’s look at the training history and check if the model overfit. We'll also generate a confusion matrix and classification report to understand how well the model performs on the validation set."
    ]
